cmake_minimum_required(VERSION 3.2)
set(CMAKE_CXX_COMPILER "/usr/bin/g++")
set(CMAKE_CXX_FLAGS   "-std=c++11 -pthread")
PROJECT(kvdb)
INCLUDE_DIRECTORIES(../include)
INCLUDE_DIRECTORIES(.)
AUX_SOURCE_DIRECTORY(. SRCS)
#add_subdirectory(../cpp)
ADD_EXECUTABLE(main ${SRCS})
#target_link_libraries(test server)